# mediarecorder

./: AudioInputSelect.qml  CMakeLists.txt  CameraSelect.qml  Controls.qml  MediaList.qml  Playback.qml  README.md  RecordButton.qml  SettingsEncoder.qml  SettingsMetaData.qml  Style.qml  StyleParameter.qml  StyleRectangle.qml  main.cpp  main.qml
